<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/part_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_manage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/part_icon"
            android:orientation="vertical">

            <TextView
                android:id="@+id/part_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:text="@string/new_part"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/additional_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_info"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/part_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/replacement_date" />

            <TextView
                android:id="@+id/part_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/part_price" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>