<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/car_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:adjustViewBounds="true"
            android:minWidth="250dp"
            android:minHeight="200dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marka_pojazdu"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/car_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Marka"
            android:textAlignment="viewEnd"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_pojazdu"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/car_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Model"
            android:textAlignment="viewEnd"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rok_produkcji_pojazdu"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/car_prod_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rok produkcji"
            android:textAlignment="viewEnd"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pojemnosc_silnika"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/car_engine_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pojemność silnika"
            android:textAlignment="viewEnd"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/konie_mechaniczne"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/car_power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Moc silnika"
            android:textAlignment="viewEnd"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>